Use `Integer.valueOf` instead